--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,31 +8,59 @@
 
     tools:context="com.example.android.miwok.MainActivity">
 
-   <TextView
-       android:id="@+id/numbers"
-       style="@style/CategoryStyle"
-       android:background="@color/category_numbers"
-       android:text="@string/category_numbers"/>
-<!--       android:onClick="openNumberList"-->
-<!--       />-->
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/category_numbers">
+
+        <TextView
+            android:id="@+id/numbers"
+            style="@style/CategoryStyle"
+            android:background="?android:attr/selectableItemBackground"
+            android:text="@string/category_numbers"
+            android:textColor="#070707" />
+        <!--       android:onClick="openNumberList"-->
+        <!--       />-->
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/category_family">
 
 
-   <TextView
-       android:id="@+id/family"
-       style="@style/CategoryStyle"
-       android:background="@color/category_family"
-       android:text="@string/category_family" />
+        <TextView
+            android:id="@+id/family"
+            style="@style/CategoryStyle"
+            android:background="?android:attr/selectableItemBackground"
+            android:text="@string/category_family"
+            android:textColor="#070707" />
+    </FrameLayout>
 
-   <TextView
-       android:id="@+id/colors"
-       style="@style/CategoryStyle"
-       android:background="@color/category_colors"
-       android:text="@string/category_colors" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/category_colors">
 
-   <TextView
-       android:id="@+id/phrases"
-       style="@style/CategoryStyle"
-       android:background="@color/category_phrases"
-       android:text="@string/category_phrases" />
+        <TextView
+            android:id="@+id/colors"
+            style="@style/CategoryStyle"
+            android:background="?android:attr/selectableItemBackground"
+            android:text="@string/category_colors"
+            android:textColor="#070707" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/category_phrases">
+
+        <TextView
+            android:id="@+id/phrases"
+            style="@style/CategoryStyle"
+            android:background="?android:attr/selectableItemBackground"
+            android:text="@string/category_phrases"
+            android:textColor="#070707" />
+    </FrameLayout>
 
 </LinearLayout>
