--- a/app/src/main/res/layout/word_list.xml
+++ b/app/src/main/res/layout/word_list.xml
@@ -7,5 +7,6 @@
     android:orientation="vertical"
     tools:context=".NumbersActivity"
     android:id="@+id/list"
-    android:background="@color/tan_background"/>
+    android:background="@color/tan_background"
+    android:drawSelectorOnTop="true" />
 
